<resources>
    <string name="app_name">Sustentavelaap</string>
    <string name="textview">TextView</string>
    <string name="bntentrar">Entrar</string>
    <string name="btnproximo">Próximo</string>
    <string name="txttexto1">SOBRE O APP</string>
    <string name="txttexto2">O ponto Cliclo é um aplicativo de SUSTENTABILIDADE, onde você pode descobrir se um objeto é RECICLAVEL ou Não</string>
    <string name="txttexto3">Além é possível descobrir os PONTOS DE COLETAS mais próximos, de acordo com a sua localização</string>
    <string name="txttexto4">O objetivo central do aplicativo é incentivar a reciclagem de maneira clara e dinâmica. Podendo ajudar o ambiente através da tecnologia</string>
    <string name="btnsus">SUSTENTABILIDADE</string>
    <string name="btnreci">RECICLÁVEL OU NÃO</string>
    <string name="btnpontos">PONTOS DE COLETA</string>
    <string name="btnsus1">Sustentabilidade</string>
    <string name="txtoquee">O que é?</string>
    <string name="txttipos">Tipos de Reciclagem </string>
    <string name="txtoquee1">A reciclagem é um processo de transformação de um objeto descartado, produto. Portanto, por meio da alteração das características de materiais descartáveis, a criação de um novo material.</string>
    <string name="txttipo1">Reciclagem Mecânica: Reciclagem mecânica recolhe os resíduos, que, posteriormente, são prensados e moídos.
        Reciclagem Energética: Incineração (queima) dos resíduos sólidos. O lixo coletado é queimado em um ambiente controlado, gerando energia calorífera suficiente para abastecer usinas térmicas.
        Reciclagem Química: A reciclagem química ocorre principalmente por meio do aquecimento de lixo, que é transformado em combustíveis, óleos e gases diversos, notadamente utilizados como matérias-primas e como fonte energética.</string>
    <string name="btnvoltar">Voltar</string>
    <string name="btnreci1">Reciclável ou Não</string>
    <string name="txtdigite"> Digite o nome do objeto:</string>
    <string name="btnverificar">VERIFICAR</string>
    <string name="txtresult">O OBJETO É:</string>
    <string name="btnvoltar2">Voltar</string>
    <string name="btnponto1">Pontos de Coletas</string>
    <string name="txtlocal"> Digite sua Localização</string>
    <string name="btnverificar2">VERIFICAR</string>
<string name="map"></string> 
    <string name="btnvoltar3">Voltar</string>

    <string name="sustentabilidade">SUSTENTABILIDADE</string>


</resources>