<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2quarta"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="700dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="449dp"
        android:layout_height="33dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-36dp"
        tools:layout_editor_absoluteY="701dp"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="32dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-4dp"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds">

    </LinearLayout>

    <Button
        android:id="@+id/btbsus1"
        android:layout_width="189dp"
        android:layout_height="46dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnsus1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtoquee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtoquee"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="161dp" />

    <TextView
        android:id="@+id/txttipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/txttipos"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="363dp" />

    <Button
        android:id="@+id/btnvoltar"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="115dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btnvoltar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck,VisualLintOverlap"
        tools:layout_editor_absoluteY="641dp" />

    <TextView
        android:id="@+id/txtoquee1"
        android:layout_width="400dp"
        android:layout_height="146dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtoquee1"
        android:textSize="20sp"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/txttipos1"
        android:layout_width="392dp"
        android:layout_height="384dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteY="395dp"
        tools:text="@string/txttipo1" />

    <ImageView
        android:id="@+id/imglogo3"
        android:layout_width="246dp"
        android:layout_height="97dp"
        android:contentDescription="@string/imglogo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>