<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2quinta">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="505dp"
        android:layout_height="34dp"
        android:layout_marginTop="99dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnvoltar2"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="507dp"
        android:layout_height="33dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="838dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="505dp"
        android:layout_height="34dp"
        android:layout_marginBottom="792dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds">

    </LinearLayout>

    <Button
        android:id="@+id/btnreci1"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="734dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnreci1"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <Button
        android:id="@+id/btnverificar"
        android:layout_width="264dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="89dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnverificar"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdigite"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/txtresult"
        android:layout_width="192dp"
        android:layout_height="38dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="#000000"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtresult"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnvoltar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnverificar"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage" />

    <Button
        android:id="@+id/btnvoltar2"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="#00bf63"
        android:text="@string/btnvoltar2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/txtdigite"
        android:layout_width="295dp"
        android:layout_height="67dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="559dp"
        android:ems="10"
        android:hint="@string/txtdigite"
        android:inputType="text"
        android:text="@string/txtdigite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imglogo4"
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="679dp"
        android:contentDescription="@string/imglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>