<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnsus1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerceiraMainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="32dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="701dp"
        tools:ignore="MissingConstraints,VisualLintBounds"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="32dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-4dp"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds"></LinearLayout>

    <Button
        android:id="@+id/btnsombra1"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:backgroundTint="#8300BF63"
        tools:ignore="MissingConstraints,VisualLintOverlap,SpeakableTextPresentCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="256dp" />

    <Button
        android:id="@+id/btnsus"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:backgroundTint="#00bf63"
        android:text="@string/sustentabilidade"
        android:textSize="34sp"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/btnsombra2"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:backgroundTint="#8300BF63"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,VisualLintOverlap,VisualLintButtonSize"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="403dp" />

    <Button
        android:id="@+id/btnreci"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:backgroundTint="#00bf63"
        android:text="@string/btnreci"
        android:textSize="34sp"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck,TextSizeCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="387dp" />

    <Button
        android:id="@+id/btnpontos"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:backgroundTint="#8300BF63"
        tools:ignore="DuplicateIds,MissingConstraints,SpeakableTextPresentCheck,VisualLintButtonSize,VisualLintOverlap"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="552dp" />

    <Button
        android:id="@+id/btnpontos"
        android:layout_width="388dp"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00bf63"
        android:text="@string/btnpontos"
        android:textColor="#ffffff"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateIds,HardcodedText,MissingConstraints,TextContrastCheck,TextSizeCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteY="536dp" />

    <ImageView
        android:id="@+id/imglogo2"
        android:layout_width="233dp"
        android:layout_height="195dp"
        android:contentDescription="@string/imglogo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>