<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2sexta"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="29dp"
        android:background="#5CEC62"
        android:backgroundTint="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="700dp"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="505dp"
        android:layout_height="34dp"
        android:layout_marginTop="789dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="505dp"
        android:layout_height="34dp"
        android:layout_marginBottom="789dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateIds,MissingConstraints,VisualLintBounds" />

    <Button
        android:id="@+id/btnponto1"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="726dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnponto1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

    <Button
        android:id="@+id/btnverificar2"
        android:layout_width="258dp"
        android:layout_height="61sp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="477dp"
        android:backgroundTint="#00bf63"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnverificar2"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="359dp"
        android:layout_height="175dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="265dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map" />

    <Button
        android:id="@+id/btnvoltar3"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="133dp"
        android:backgroundTint="#00bf63"
        android:text="@string/btnvoltar3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/txtlocal"
        android:layout_width="363dp"
        android:layout_height="116dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="560dp"
        android:ems="10"
        android:hint="@string/txtlocal"
        android:inputType="text"
        android:text="@string/txtlocal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imglogo5"
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="684dp"
        android:contentDescription="@string/imglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnverificar2"
        android:layout_width="178dp"
        android:layout_height="75dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="547dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="109dp"
        android:backgroundTint="#5CEC62"
        android:text="@string/btnverificar2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="637dp"
        android:backgroundTint="#5CEC62"
        android:text="@string/btnponto1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="29dp"
        android:background="#5CEC62"
        android:backgroundTint="#5CEC62"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="700dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5CEC62"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="700dp"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="29dp"
        android:layout_marginBottom="701dp"
        android:background="#5CEC62"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>